# STDISCM-MCO

./: CMakeLists.txt  README.md  STDISCM-SFML-CMAKE.cpp  STDISCM-SFML-CMAKE.h
Media/: assets.txt
src/: AGameObject.h  BGObject.cpp  BGObject.h  BaseRunner.cpp  BaseRunner.h  FPSCounter.cpp  TextureDisplay.cpp  TextureDisplay.h  TextureManager.cpp  TextureManager.h  ThreadPool.cpp  ThreadPool.h
